--- a/CafeManagement/app/src/main/AndroidManifest.xml
+++ b/CafeManagement/app/src/main/AndroidManifest.xml
@@ -20,37 +20,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CafeManagement"
         tools:targetApi="31">
+
+        <!--회원관리 액티비티-->
         <activity
-            android:name=".SplashActivity"
-            android:exported="false" />
+            android:name=".MemberInfo"
+            android:exported="true" />
         <activity
-            android:name=".ManagerEdit"
-            android:exported="false"
-            android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".PhoneActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ManagerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MonthSalemana"
-            android:exported="false"
+            android:name=".MainMemberActivity"
+            android:exported="true"
             android:windowSoftInputMode="adjustNothing" />
-        <activity
-            android:name=".DaySalemana"
-            android:exported="false"
-            android:windowSoftInputMode="adjustNothing" />
-        <activity
-            android:name=".OrdersActivity"
-            android:exported="false"
-            android:windowSoftInputMode="adjustNothing" />
-        <activity
-            android:name=".SaleManagement"
-            android:exported="false" />
-        <activity
-            android:name=".ExcelCustomDialog"
-            android:exported="false" />
+
+        <!--메뉴관리 액티비티-->
         <activity
             android:name=".CategoryPopupActivity"
             android:exported="false"
@@ -68,25 +48,8 @@
             android:name=".MenuBoardActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustNothing" />
-        <activity
-            android:name=".CustomDialog"
-            android:exported="true" />
-        <activity
-            android:name=".MemberInfo_list"
-            android:exported="true" />
-        <activity
-            android:name=".MemberInfo"
-            android:exported="true" />
-        <activity
-            android:name=".member_list"
-            android:exported="true" />
-        <activity
-            android:name=".MainMemberActivity"
-            android:exported="true"
-            android:windowSoftInputMode="adjustNothing" />
-        <activity
-            android:name=".InventoryCustomDialog"
-            android:exported="false" />
+
+        <!--재고관리 액티비티-->
         <activity
             android:name=".EditInventory"
             android:exported="false" />
@@ -97,6 +60,38 @@
             android:name=".InventoryManagement"
             android:exported="false"
             android:windowSoftInputMode="adjustPan" />
+
+        <!--매출관리 액티비티-->
+        <activity
+            android:name=".ExcelCustomDialog"
+            android:exported="false" />
+        <activity
+            android:name=".MonthSalemana"
+            android:exported="false"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".DaySalemana"
+            android:exported="false"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".OrdersActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".SaleManagement"
+            android:exported="false" />
+
+        <!--관리자계정 액티비티-->
+        <activity
+            android:name=".PhoneActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ManagerEdit"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ManagerActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
